# procmux

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/decisions/: 2026-04-04-public-release-prep.md
examples/python/: basic.py
examples/rust/: basic.rs
py/: README.md  pyproject.toml
py/procmux/: __init__.py  protocol.py  server.py
rs/: README.md
rs/src/: client.rs  protocol.rs  server.rs
tests/: integration.rs  proptest.rs  stress.rs
