[package]
name = "procmux"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "procmux"
path = "rs/src/main.rs"

[lib]
name = "procmux"
path = "rs/src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
thiserror = "2"
anyhow = "1"
nix = { version = "0.29", features = ["signal", "process"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = "1"
rand = "0.8"

[[example]]
name = "basic"
path = "examples/rust/basic.rs"
