[project]
name = "procmux"
version = "0.1.0"
description = "Subprocess multiplexer with JSON-line IPC over Unix sockets"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["procmux"]
